# cover-regulatory-engine

./: .env.example  .gitignore  alembic.ini  compose.local.yaml  pyproject.toml  railway.json  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_pgvector_config.py  003_add_feedback_idempotency_key.py
artifacts/review/TASK-API-004/: independent_review_request_round_1.json
artifacts/review/TASK-API-006/: independent_review_request_round_1.json
artifacts/review/TASK-API-007/: independent_review_request_round_1.json
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: cto_decision_log.md  demo-brief.md  demo-data-notes.md  local-development.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  styles.css
infra/: railway-topology.md
scripts/: seed_local_admin.py
src/: main.py
src/api/: __init__.py  health.py
src/api/admin/: __init__.py  (+1 more)
src/core/: __init__.py  config.py  exceptions.py
src/db/: __init__.py  base.py  session.py  vector.py
src/models/: __init__.py  assessment.py  extracted_rule.py  feedback.py  ingested_document.py  ingestion_pipeline.py  parcel.py  parcel_constraint.py  rule_provenance.py  user.py
src/schemas/: __init__.py  admin.py  assessment.py  base.py  parcel.py
src/services/: __init__.py  embeddings.py
tests/: test_task_api_003.py  test_task_api_004.py  test_task_api_005.py  test_task_api_006.py  test_task_api_007.py  test_task_api_008.py  test_task_fsm_001.py  test_task_obs_001.py  test_task_rag_001.py
(+98 files in other folders)
