[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cover-regulatory-engine"
version = "0.1.0"
description = "Cover Home Building Regulatory Engine - Geospatial regulatory rules engine"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.128.8,<0.129.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.31.0",
    "alembic>=1.14.0",
    "geoalchemy2>=0.18.4",
    "pgvector>=0.4.2",
    "shapely>=2.0.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "structlog>=25.1.0",
    "googlemaps>=4.10.0",
    "transitions>=0.9.0",
]

[project.optional-dependencies]
rag = [
    "langchain>=0.3.0",
    "pypdf>=5.0.0",
    "unstructured>=0.16.0",
]
export = [
    "weasyprint>=62.0",
    "reportlab>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
